--- a/login.html
+++ b/login.html
@@ -6,6 +6,24 @@
     <title>Login</title>
 </head>
 <body>
-    
+    <nav>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="menu.html">Menú</a></li>
+      <li><a href="reseñas.html">Reseñas</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+      <li><a href="login.html">Ingresar</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h2>Iniciar sesión en Neko no Mori</h2>
+    <form>
+      <label for="user">Usuario:</label>
+      <input type="text" id="user" name="user" required />
+      <label for="password">Contraseña:</label>
+      <input type="password" id="password" name="password" required />
+      <button type="submit">Ingresar</button>
+    </form>
+  </main>
 </body>
 </html>
