--- a/reseñas.html
+++ b/reseñas.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reseñas</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <nav>
+  <h2>Navegación</h2>
     <ul>
       <li><a href="index.html">Inicio</a></li>
       <li><a href="menu.html">Menú</a></li>
@@ -15,7 +17,7 @@
     </ul>
   </nav>
   <main>
-    <h2>Reseñas de nuestros clientes</h2>
+    <h1>Reseñas de nuestros clientes</h1>
     <section>
       <article>
         <h3>Ana María L.</h3>
