--- a/contactos.html
+++ b/contactos.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <h2>Navegación</h2>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
+                <li><a href="reseñas.html">Reseñas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="login.html">Ingresar</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <article id="contactos">
-            <h2>Contactos</h2>
+            <h1>Contactos</h1>
             <p>Correo: nekomori@gmail.com</p>
             <a href="https://www.instagram.com/">Instagram</a><br>
             <a href="https://www.tiktok.com/">Tiktok</a><br>
