--- a/login.html
+++ b/login.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-    <ul>
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="menu.html">Menú</a></li>
-      <li><a href="reseñas.html">Reseñas</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
-      <li><a href="login.html">Ingresar</a></li>
-    </ul>
-  </nav>
+      <h2>Navegación</h2>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="menu.html">Menú</a></li>
+        <li><a href="reseñas.html">Reseñas</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="login.html">Ingresar</a></li>
+      </ul>
+    </nav>
   <main>
-    <h2>Iniciar sesión en Neko no Mori</h2>
+    <h1>Iniciar sesión en Neko no Mori</h1>
     <form>
       <label for="user">Usuario:</label>
-      <input type="text" id="user" name="user" required />
+      <input type="text" id="user" name="user" required /><br>
       <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required />
+      <input type="password" id="password" name="password" required /><br>
       <button type="submit">Ingresar</button>
     </form>
   </main>
