--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
             <article class="producto">
                 <header><h3>"Cookies & Creme Frappuccino"</h3></header>
                 <figure>
-                    <img src="D:\Clases\UNSA\Clases\Semestre II\IDWEB\Laboratorio\Lab_IDWEB\proyecto-web1\recurs\frappuccino.png" alt="">
+                    <img src="recurs/frappuccino.png" alt="">\
                 </figure>
                 <h4>Precio</h4>
                 <p>S/16</p>
