--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
             <article class="producto">
                 <header><h3>"Latte helado"</h3></header>
                 <figure>
-                    <img src="recurs/frappuccino.png" width="120">
+                    <img src="recurs/latte.png" width="120">
                 </figure>
                 <h4>Precio</h4>
                 <p>S/12</p>
@@ -53,7 +53,7 @@
             <article class="producto">
                 <header><h3>"Chocolate caliente"</h3></header>
                 <figure>
-                    <img src="recurs/frappuccino.png" width="120">
+                    <img src="recurs/chocolateC.png" width="120">
                 </figure>
                 <h4>Precio</h4>
                 <p>S/13</p>
@@ -67,10 +67,10 @@
             <article class="producto">
                 <header><h3>"Muffin de Naranja"</h3></header>
                 <figure>
-                    <img src="recurs/frappuccino.png" width="120">
+                    <img src="recurs/muffin.png" width="120">
                 </figure>
                 <h4>Precio</h4>
-                <p>S/10</p>
+                <p>S/20</p>
                 <label for="canti4">Precio:</label>
                 <input type="number" id="canti4" min="1">
                 <h4>Descripción</h4>
