--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <header>
         <br>
+        <img class="logo" src="recurs/logo.png" width="180">
         <!--Nombre de nuestra empresa-->
         <h1 class="title">Neko no Mori</h1>
         <p class="subtitle">Coffe and cats</p>
+        
     </header>
 
     <main>
@@ -30,7 +32,7 @@
         <h2>
             ¡Bienvenidos a Neko no Mori!
         </h2>
-        <p>
+        <p class="margen">
             Donde el aroma del café se mezcla con ronroneos y suaves patitas.
             Aquí podrás disfrutar de una bebida calentita, un postre delicioso y, sobre todo, 
             la mejor compañía: nuestros adorables mininos.
@@ -42,7 +44,7 @@
         <!--Historia de nuestra empresa-->
         <article>
         <h2>Nuestra historia:</h2>
-        <p>Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
+        <p class="margen">Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
            Elegimos este nombre por la calidez de su significado —“Bosque de gatos”—, porque al cruzar
            nuestras puertas queremos que sientas esa misma sensación: la de adentrarte en un pequeño bosque
            lleno de ternura, ronroneos y calma.
@@ -60,7 +62,7 @@
         <!--Nuestra Misión-->
         <article>
         <h2>Misión:</h2>
-        <p>En Neko no Mori, nuestra misión es ofrecer una experiencia única que combine la excelencia del café artesanal con un ambiente 
+        <p class="margen">En Neko no Mori, nuestra misión es ofrecer una experiencia única que combine la excelencia del café artesanal con un ambiente 
            de serenidad y ternura inspirado en la compañía de gatos rescatados.
            Nos comprometemos a brindar productos de alta calidad, elaborados con dedicación y respeto por los procesos del café, para que
            cada taza refleje el cuidado y la pasión que ponemos en nuestro trabajo.
