--- a/menu.html
+++ b/menu.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú</title>
+    <title>Productos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <br>
+        <img class="logo" src="recurs/logo.png" width="180">
+        <!--Nombre de nuestra empresa-->
+        <h1 class="title">Neko no Mori</h1>
+        <p class="subtitle">Coffe and cats</p>
         <nav>
             <h2>Navegación</h2>
             <ul>
@@ -18,18 +23,15 @@
                 <li><a href="login.html">Ingresar</a></li>
             </ul>
         </nav>
-        <h1>Menú</h1>
+        
     </header>
     <main>
+        <h1>Productos</h1>
         <section id="productos">
             <article class="producto">
                 <header><h3>"Cookies & Creme Frappuccino"</h3></header>
                 <figure>
-<<<<<<< HEAD
-                    <img src="recurs\frappuccino.png" alt="">
-=======
                     <img src="recurs/frappuccino.png" width="120">
->>>>>>> 7d0ec27f9dac0c6ab6ad7d9b0b7066eafc8fcdd2
                 </figure>
                 <h4>Precio</h4>
                 <p>S/16</p>
