--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
         <!--Nombre de nuestra empresa-->
         <h1 class="title">Neko no Mori</h1>
         <p class="subtitle">Coffe and cats</p>
-        
-    </header>
-
-    <main>
         <nav>
-            <h2>Menú:</h2>
+            
             <ul>
+                <h2>Navegación</h2>
                 <li><a href="menu.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
                 <li><a href="contacto.html">Contacto y ubicación</a></li>
                 <li><a href="login.html">Formulario de usuario</a></li>
             </ul>
         </nav>
+    </header>
+
+    <main>
         <br>
         <!--Bienvenida-->
         <article class="bienvenido">
+            <br><br><br><br><br><br>
         <h2>
             ¡Bienvenidos a Neko no Mori!
         </h2>
