--- a/reseñas.html
+++ b/reseñas.html
@@ -6,18 +6,29 @@
     <title>Reseñas</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<nav>
-  <h2>Navegación</h2>
-    <ul>
-      <li><a href="index.html">Inicio</a></li>
-      <li><a href="menu.html">Menú</a></li>
-      <li><a href="reseñas.html">Reseñas</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
-      <li><a href="login.html">Ingresar</a></li>
-    </ul>
-  </nav>
+<header>
+        <br>
+        <img class="logo" src="recurs/logo.png" width="180">
+        <!--Nombre de nuestra empresa-->
+        <h1 class="title">Neko no Mori</h1>
+        <p class="subtitle">Coffe and cats</p>
+        <nav>
+            <ul>
+                <h2>Navegación</h2>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
+                <li><a href="reseñas.html">Reseñas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="login.html">Ingresar</a></li>
+            </ul>
+        </nav>
+        
+    </header>
+
+<body>
   <main>
-    <h1>Reseñas de nuestros clientes</h1>
+    <br><br><br><br><br><br><br><br>
+    <h2>Reseñas de nuestros clientes</h2>
     <section>
       <article>
         <h3>Ana María L.</h3>
@@ -33,7 +44,5 @@
       </article>
     </section>
   </main>
-<body>
-    
 </body>
 </html>
