--- a/contactos.html
+++ b/contactos.html
@@ -8,18 +8,25 @@
 </head>
 <body>
     <header>
+        <br>
+        <img class="logo" src="recurs/logo.png" width="180">
+        <!--Nombre de nuestra empresa-->
+        <h1 class="title">Neko no Mori</h1>
+        <p class="subtitle">Coffe and cats</p>
         <nav>
-            <h2>Navegación</h2>
+            
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="menu.html">Menú</a></li>
+                <h2>Navegación</h2>
+                <li><a href="menu.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="login.html">Ingresar</a></li>
+                <li><a href="contacto.html">Contacto y ubicación</a></li>
+                <li><a href="login.html">Formulario de usuario</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
+        <br><br><br><br><br><br>
         <article id="contactos">
             <h1>Contactos</h1>
             <p>Correo: nekomori@gmail.com</p>
