--- a/login.html
+++ b/login.html
@@ -7,17 +7,27 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-      <h2>Navegación</h2>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="menu.html">Menú</a></li>
-        <li><a href="reseñas.html">Reseñas</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="login.html">Ingresar</a></li>
-      </ul>
-    </nav>
+    <header>
+        <br>
+        <img class="logo" src="recurs/logo.png" width="180">
+        <!--Nombre de nuestra empresa-->
+        <h1 class="title">Neko no Mori</h1>
+        <p class="subtitle">Coffe and cats</p>
+        <nav>
+            <ul>
+                <h2>Navegación</h2>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
+                <li><a href="reseñas.html">Reseñas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="login.html">Ingresar</a></li>
+            </ul>
+        </nav>
+        
+    </header>
+    
   <main>
+    <br><br><br><br><br><br><br><br>
     <h1>Iniciar sesión en Neko no Mori</h1>
     <form>
       <label for="user">Usuario:</label>
