--- a/contactos.html
+++ b/contactos.html
@@ -17,23 +17,33 @@
             
             <ul>
                 <h2>Navegación</h2>
-                <li><a href="menu.html">Nuestros Productos</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contacto.html">Contacto y ubicación</a></li>
-                <li><a href="login.html">Formulario de usuario</a></li>
+                <li><a href="contactos.html">Contacto y ubicación</a></li>
+                <li><a href="login.html">Ingresar</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <br><br><br><br><br><br>
-        <article id="contactos">
-            <h1>Contactos</h1>
-            <p>Correo: nekomori@gmail.com</p>
-            <a href="https://www.instagram.com/">Instagram</a><br>
-            <a href="https://www.tiktok.com/">Tiktok</a><br>
-            <a href="https://www.facebook.com/">Facebook</a>
-        </article>
+        <br><br><br><br><br><br><br>
+        <section class="cyu">
+            <article>
+                <!--Ubicación-->
+                <h2>Ubicación</h2>
+                <img src="recurs/ubi.png" width="400" >
+            </article>
+            <article>
+                <!--Contactos-->
+                <h2>Contactos</h2>
+                <p>Correo: nekomori@gmail.com</p>
+                <a href="https://www.instagram.com/">Instagram</a><br>
+                <a href="https://www.tiktok.com/">Tiktok</a><br>
+                <a href="https://www.facebook.com/">Facebook</a>
+            </article>
+        </section>
+        
     </main>
 </body>
 </html>
