--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>neko no mori</title>
+    <title>Neko no mori</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,10 +17,11 @@
             
             <ul>
                 <h2>Navegación</h2>
-                <li><a href="menu.html">Nuestros Productos</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contacto.html">Contacto y ubicación</a></li>
-                <li><a href="login.html">Formulario de usuario</a></li>
+                <li><a href="contactos.html">Contacto y ubicación</a></li>
+                <li><a href="login.html">Ingresar</a></li>
             </ul>
         </nav>
     </header>
