--- a/productos.html
+++ b/productos.html
@@ -17,16 +17,16 @@
             <ul>
                 <h2>Navegación</h2>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="menu.html">Menú</a></li>
+                <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="contactos.html">Contacto y ubicación</a></li>
                 <li><a href="login.html">Ingresar</a></li>
             </ul>
         </nav>
         
     </header>
     <main>
-        <br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br>
         <h2>Productos</h2><hr>
         <section id="productos">
             <article class="producto">
