--- a/reseñas.html
+++ b/reseñas.html
@@ -16,9 +16,9 @@
             <ul>
                 <h2>Navegación</h2>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="menu.html">Menú</a></li>
+                <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="contactos.html">Contacto y ubicación</a></li>
                 <li><a href="login.html">Ingresar</a></li>
             </ul>
         </nav>
