--- a/contactos.html
+++ b/contactos.html
@@ -12,7 +12,7 @@
             <h2>Navegación</h2>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="menu.html">Menú</a></li>
+                <li><a href="menu.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="login.html">Ingresar</a></li>
