--- a/contactos.html
+++ b/contactos.html
@@ -8,20 +8,25 @@
 </head>
 <body>
     <header>
+        <br>
+        <img class="logo" src="recurs/logo.png" width="180">
+        <!--Nombre de nuestra empresa-->
+        <h1 class="title">Neko no Mori</h1>
+        <p class="subtitle">Coffe and cats</p>
         <nav>
-            <h2>Navegación</h2>
             <ul>
+                <h2>Navegación</h2>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="menu.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="contactos.html">Contacto</a></li>
                 <li><a href="login.html">Ingresar</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <article id="contactos">
-            <h1>Contactos</h1>
+        <article class="contacto">
+            <h3>Contactos</h3>
             <p>Correo: nekomori@gmail.com</p>
             <a href="https://www.instagram.com/">Instagram</a><br>
             <a href="https://www.tiktok.com/">Tiktok</a><br>
