--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
         <h1 class="title">Neko no Mori</h1>
         <p class="subtitle">Coffe and cats</p>
         <nav>
-            
             <ul>
                 <h2>Navegación</h2>
                 <li><a href="menu.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contacto.html">Contacto y ubicación</a></li>
+                <li><a href="contactos.html">Contacto y ubicación</a></li>
                 <li><a href="login.html">Formulario de usuario</a></li>
             </ul>
         </nav>
