--- a/login.html
+++ b/login.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <nav>
-      <h2>Navegación</h2>
       <ul>
+        <h2>Navegación</h2>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="menu.html">Nuestros Productos</a></li>
         <li><a href="reseñas.html">Reseñas</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="contactos.html">Contacto</a></li>
         <li><a href="login.html">Ingresar</a></li>
       </ul>
     </nav>
