--- a/menu.html
+++ b/menu.html
@@ -14,12 +14,12 @@
         <h1 class="title">Neko no Mori</h1>
         <p class="subtitle">Coffe and cats</p>
         <nav>
-            <h2>Navegación</h2>
             <ul>
+                <h2>Navegación</h2>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="menu.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="contactos.html">Contacto</a></li>
                 <li><a href="login.html">Ingresar</a></li>
             </ul>
         </nav>
