--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neko no mori</title>
+    <title>neko no mori</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,15 +16,10 @@
         <nav>
             <ul>
                 <h2>Navegación</h2>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Nuestros Productos</a></li>
+                <li><a href="menu.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
                 <li><a href="contactos.html">Contacto y ubicación</a></li>
-<<<<<<< HEAD
                 <li><a href="login.html">Formulario de usuario</a></li>
-=======
-                <li><a href="login.html">Ingresar</a></li>
->>>>>>> cf8a5aba8c16d950913fc49e8e195e16c40c1b55
             </ul>
         </nav>
     </header>
@@ -33,7 +28,6 @@
         <br>
         <!--Bienvenida-->
         <article class="bienvenido">
-            <br><br><br><br><br><br>
         <h2>
             ¡Bienvenidos a Neko no Mori!
         </h2>
