--- a/menu.html
+++ b/menu.html
@@ -25,9 +25,11 @@
         </nav>
         
     </header>
-    <main>
-        <h1>Productos</h1>
-        <section id="productos">
+    <main >
+
+        <section id="productos" class="margen">
+            <br><br><br><br><br><br><br>
+            <h2>Productos</h2>
             <article class="producto">
                 <header><h3>"Cookies & Creme Frappuccino"</h3></header>
                 <figure>
@@ -35,12 +37,13 @@
                 </figure>
                 <h4>Precio</h4>
                 <p>S/16</p>
-                <label for="canti1">Precio:</label>
+                <label for="canti1">Cantidad:</label>
                 <input type="number" id="canti1" min="1">
                 <h4>Descripción</h4>
                 <p>Clásico frappuccino de leche batido con mocha blanco y gotas sabor a chocolate, jarabe de azúcar y decorado con crema batida y topping de galletas trozadas.</p>
                 <br><br>
             </article>
+            <hr>
 
             <article class="producto">
                 <header><h3>"Latte helado"</h3></header>
@@ -49,12 +52,13 @@
                 </figure>
                 <h4>Precio</h4>
                 <p>S/12</p>
-                <label for="canti2">Precio:</label>
+                <label for="canti2">Cantidad:</label>
                 <input type="number" id="canti2" min="1">
                 <h4>Descripción</h4>
                 <p>Café Espresso de cuerpo completo mezclado con leche fría y cubos de hielo. Sin endulzantes. Imágenes referenciales.</p>
                 <br><br>
             </article>
+            <hr>
 
             <article class="producto">
                 <header><h3>"Chocolate caliente"</h3></header>
@@ -63,12 +67,13 @@
                 </figure>
                 <h4>Precio</h4>
                 <p>S/13</p>
-                <label for="canti3">Precio:</label>
+                <label for="canti3">Cantidad:</label>
                 <input type="number" id="canti3" min="1">
                 <h4>Descripción</h4>
                 <p>Clásico chocolate caliente con leche vaporizada y salsa de chocolate. Sin endulzantes adicionales. Imágenes referenciales.</p>
                 <br><br>
             </article>
+            <hr>
 
             <article class="producto">
                 <header><h3>"Muffin de Naranja"</h3></header>
@@ -77,8 +82,8 @@
                 </figure>
                 <h4>Precio</h4>
                 <p>S/20</p>
-                <label for="canti4">Precio:</label>
-                <input type="number" id="canti4" min="1">
+                <label for="canti4">Cantidad:</label>
+                <input type="number" id="canti4" min="1"  ;>
                 <h4>Descripción</h4>
                 <p>Muffin realizado con harina de trigo, aceite vegetal, huevos, jugo de naranja, ralladura de naranja, cobertura bitter, margarina, azucar, escencia de vainilla y naranja. Porción individual. Imágenes referenciales.</p>
                 <br><br>
