--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <h2>Navegación</h2>
-                <li><a href="menu.html">Nuestros Productos</a></li>
+                <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
                 <li><a href="contactos.html">Contacto y ubicación</a></li>
                 <li><a href="login.html">Formulario de usuario</a></li>
