--- a/contactos.html
+++ b/contactos.html
@@ -17,8 +17,7 @@
             <ul>
                 <h2>Navegación</h2>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="menu.html">Nuestros Productos</a></li>
-                <li><a href="reseñas.html">Reseñas</a></li>
+                <li><a href="productos.html">Reseñas</a></li>
                 <li><a href="contactos.html">Contacto</a></li>
                 <li><a href="login.html">Ingresar</a></li>
             </ul>
