--- a/contactos.html
+++ b/contactos.html
@@ -24,13 +24,22 @@
         </nav>
     </header>
     <main>
-        <article class="contacto">
-            <h3>Contactos</h3>
-            <p>Correo: nekomori@gmail.com</p>
-            <a href="https://www.instagram.com/">Instagram</a><br>
-            <a href="https://www.tiktok.com/">Tiktok</a><br>
-            <a href="https://www.facebook.com/">Facebook</a>
-        </article>
+        <br><br><br><br><br><br><br>
+        <section class="cyu">
+            <article>
+                <!--Ubicación-->
+                <h2>Ubicación</h2>
+                <img src="recurs/ubi.png" width="400" >
+            </article>
+            <article>
+                <!--Contactos-->
+                <h2>Contactos</h2>
+                <p>Correo: nekomori@gmail.com</p>
+                <a href="https://www.instagram.com/">Instagram</a><br>
+                <a href="https://www.tiktok.com/">Tiktok</a><br>
+                <a href="https://www.facebook.com/">Facebook</a>
+            </article>
+        </section>
     </main>
 </body>
 </html>
