--- a/login.html
+++ b/login.html
@@ -24,6 +24,19 @@
         </ul>
       </nav>
   </header>
+        <nav>
+            <ul>
+                <h2>Navegación</h2>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="menu.html">Menú</a></li>
+                <li><a href="reseñas.html">Reseñas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="login.html">Ingresar</a></li>
+            </ul>
+        </nav>
+        
+    </header>
+    
   <main>
     <h2>Iniciar sesión en Neko no Mori</h2>
     <form>
