--- a/menu.html
+++ b/menu.html
@@ -25,6 +25,10 @@
         </nav>
         
     </header>
+    <main>
+        <br><br><br><br><br><br><br><br>
+        <h2>Productos</h2><hr>
+        <section id="productos">
     <main >
 
         <section id="productos" class="margen">
