--- a/contactos.html
+++ b/contactos.html
@@ -17,9 +17,10 @@
             <ul>
                 <h2>Navegación</h2>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Reseñas</a></li>
-                <li><a href="contactos.html">Contacto</a></li>
-                <li><a href="login.html">Ingresar</a></li>
+                <li><a href="productos.html">Nuestros Productos</a></li>
+                <li><a href="reseñas.html">Reseñas</a></li>
+                <li><a href="contactos.html">Contacto y ubicación</a></li>
+                <li><a href="login.html">Formulario de usuario</a></li>
             </ul>
         </nav>
     </header>
