--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav>
             <ul>
                 <h2>Navegación</h2>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
                 <li><a href="contactos.html">Contacto y ubicación</a></li>
