--- a/productos.html
+++ b/productos.html
@@ -17,10 +17,10 @@
             <ul>
                 <h2>Navegación</h2>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="menu.html">Nuestros Productos</a></li>
+                <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
-                <li><a href="contactos.html">Contacto</a></li>
-                <li><a href="login.html">Ingresar</a></li>
+                <li><a href="contactos.html">Contacto y ubicación</a></li>
+                <li><a href="login.html">Formulario de usuario</a></li>
             </ul>
         </nav>
         
@@ -31,14 +31,15 @@
             <br><br><br><br><br><br><br>
             <h2>Productos</h2>
             <article class="producto">
-                <header><h3>"Cookies & Creme Frappuccino"</h3></header>
+                <header><h3>Cookies & Creme Frappuccino</h3></header>
                 <figure>
                     <img src="recurs/frappuccino.png" width="120">
                 </figure>
-                <h4>Precio</h4>
-                <p>S/16</p>
-                <label for="canti1">Cantidad:</label>
-                <input type="number" id="canti1" min="1">
+                <div>
+                    <p>Precio: S/16</p>
+                    <label for="canti1">Cantidad:</label>
+                    <input type="number" id="canti1" min="1">
+                </div>
                 <h4>Descripción</h4>
                 <p>Clásico frappuccino de leche batido con mocha blanco y gotas sabor a chocolate, jarabe de azúcar y decorado con crema batida y topping de galletas trozadas.</p>
                 <br><br>
@@ -46,46 +47,49 @@
             <hr>
 
             <article class="producto">
-                <header><h3>"Latte helado"</h3></header>
+                <header><h3>Latte <br>helado</h3></header>
                 <figure>
                     <img src="recurs/latte.png" width="120">
                 </figure>
-                <h4>Precio</h4>
-                <p>S/12</p>
-                <label for="canti2">Cantidad:</label>
-                <input type="number" id="canti2" min="1">
+                <div>
+                    <p>Precio: S/12</p>
+                    <label for="canti1">Cantidad:</label>
+                    <input type="number" id="canti1" min="1">
+                </div>
                 <h4>Descripción</h4>
-                <p>Café Espresso de cuerpo completo mezclado con leche fría y cubos de hielo. Sin endulzantes. Imágenes referenciales.</p>
+                <p>Café Espresso de cuerpo completo mezclado con leche fría y cubos de hielo. Sin endulzantes.</p>
                 <br><br>
             </article>
             <hr>
 
             <article class="producto">
-                <header><h3>"Chocolate caliente"</h3></header>
+                <header><h3>Chocolate caliente</h3></header>
                 <figure>
                     <img src="recurs/chocolateC.png" width="120">
                 </figure>
-                <h4>Precio</h4>
-                <p>S/13</p>
-                <label for="canti3">Cantidad:</label>
-                <input type="number" id="canti3" min="1">
+                <div>
+                    <p>Precio: S/13</p>
+                    <label for="canti1">Cantidad:</label>
+                    <input type="number" id="canti1" min="1">
+                </div>
                 <h4>Descripción</h4>
-                <p>Clásico chocolate caliente con leche vaporizada y salsa de chocolate. Sin endulzantes adicionales. Imágenes referenciales.</p>
+                <p>Clásico chocolate caliente con leche vaporizada y salsa de chocolate. Sin endulzantes adicionales.</p>
                 <br><br>
             </article>
             <hr>
 
             <article class="producto">
-                <header><h3>"Muffin de Naranja"</h3></header>
+                <header><h3>Muffin de Naranja</h3></header>
                 <figure>
                     <img src="recurs/muffin.png" width="120">
                 </figure>
-                <h4>Precio</h4>
-                <p>S/20</p>
-                <label for="canti4">Cantidad:</label>
-                <input type="number" id="canti4" min="1"  ;>
+                <div>
+                    <p>Precio: S/20</p>
+                    <label for="canti1">Cantidad:</label>
+                    <input type="number" id="canti1" min="1">
+                </div>
                 <h4>Descripción</h4>
-                <p>Muffin realizado con harina de trigo, aceite vegetal, huevos, jugo de naranja, ralladura de naranja, cobertura bitter, margarina, azucar, escencia de vainilla y naranja. Porción individual. Imágenes referenciales.</p>
+                <p>Muffin realizado con harina de trigo, aceite vegetal, huevos, jugo de naranja y ralladura de naranja.</p>
                 <br><br>
             </article>
         </section>
