Modificando index.html con css

--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
         </nav>
     </header>
 
-    <main>
+    <main class="index">
         <br>
         <!--Bienvenida-->
-        <article class="bienvenido">
+        <article class="bienvenido" >
         <h2>
             ¡Bienvenidos a Neko no Mori!
         </h2>
-        <p class="margen">
+        <img src="recurs/bienvenida.jpg" width="190">
+        <p>
             Donde el aroma del café se mezcla con ronroneos y suaves patitas.
             Aquí podrás disfrutar de una bebida calentita, un postre delicioso y, sobre todo, 
             la mejor compañía: nuestros adorables mininos.
@@ -39,11 +40,13 @@
             cada sorbo viene con amor gatuno.
         </p>
         </article>
+        <hr>
 
+        <section class="contenedor">
         <!--Historia de nuestra empresa-->
-        <article>
+        <article class="seccion" >
         <h2>Nuestra historia:</h2>
-        <p class="margen">Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
+        <p> Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
            Elegimos este nombre por la calidez de su significado —“Bosque de gatos”—, porque al cruzar
            nuestras puertas queremos que sientas esa misma sensación: la de adentrarte en un pequeño bosque
            lleno de ternura, ronroneos y calma.
@@ -57,11 +60,12 @@
            la buena energía se encuentran en cada taza. 
         </p>
         </article>
+        <hr>
         
         <!--Nuestra Misión-->
-        <article>
+        <article class="seccion" >
         <h2>Misión:</h2>
-        <p class="margen">En Neko no Mori, nuestra misión es ofrecer una experiencia única que combine la excelencia del café artesanal con un ambiente 
+        <p >En Neko no Mori, nuestra misión es ofrecer una experiencia única que combine la excelencia del café artesanal con un ambiente 
            de serenidad y ternura inspirado en la compañía de gatos rescatados.
            Nos comprometemos a brindar productos de alta calidad, elaborados con dedicación y respeto por los procesos del café, para que
            cada taza refleje el cuidado y la pasión que ponemos en nuestro trabajo.
@@ -71,7 +75,12 @@
            del café y el amor por los animales.
         </p>
         </article>
-
+        <hr>
+        </section>
     </main>
+
+    <footer>
+        <p>&copy;2025 Winx</p>
+    </footer>
 </body>
 </html>
