--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="contenedor">
         <!--Historia de nuestra empresa-->
         <article class="seccion" >
-        <h2>Nuestra historia:</h2>
+        <h2>Nuestra historia:</h2> <img src="recurs/history.jpg" width="230" class="img">
         <p> Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
            Elegimos este nombre por la calidez de su significado —“Bosque de gatos”—, porque al cruzar
            nuestras puertas queremos que sientas esa misma sensación: la de adentrarte en un pequeño bosque
@@ -61,11 +61,10 @@
            la buena energía se encuentran en cada taza. 
         </p>
         </article>
-        <hr>
         
         <!--Nuestra Misión-->
         <article class="seccion" >
-        <h2>Misión:</h2>
+        <h2>Misión:</h2><img src="recurs/mision.jpg" width="230" class="img">
         <p >En Neko no Mori, nuestra misión es ofrecer una experiencia única que combine la excelencia del café artesanal con un ambiente 
            de serenidad y ternura inspirado en la compañía de gatos rescatados.
            Nos comprometemos a brindar productos de alta calidad, elaborados con dedicación y respeto por los procesos del café, para que
@@ -76,7 +75,6 @@
            del café y el amor por los animales.
         </p>
         </article>
-        <hr>
         </section>
     </main>
 
