--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </main>
 
     <footer>
-        <p>&copy;2025 Winx</p>
+        <p>&copy;2025 Winx- Neko no Mori</p>
     </footer>
 </body>
 </html>
