--- a/login.html
+++ b/login.html
@@ -34,5 +34,10 @@
       <button type="submit">Ingresar</button>
     </form>
   </main>
+
+  <footer>
+        <p>&copy;2025 Winx- Neko no Mori</p>
+    </footer>
+    
 </body>
 </html>
