--- a/productos.html
+++ b/productos.html
@@ -94,5 +94,9 @@
             </article>
         </section>
     </main>
+
+    <footer>
+        <p>&copy;2025 Winx- Neko no Mori</p>
+    </footer>
 </body>
 </html>
