agregado espacio en login y reseñas para que no se sobreescriba

--- a/reseñas.html
+++ b/reseñas.html
@@ -25,7 +25,7 @@
   </nav>
 </header>
 
-  <main>
+  <main class="espacio">
     <h2>Reseñas de nuestros clientes</h2>
     <section>
       <article>
