--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
         </ul>
       </nav>
   </header>
-  <main>
+  <main class="espacio">
     <h2>Iniciar sesión en Neko no Mori</h2>
     <form>
       <label for="user">Usuario:</label>
