--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
         <img class="logo" src="recurs/logo.png" width="180">
         <!--Nombre de nuestra empresa-->
         <h1 class="title">Neko no Mori</h1>
-        <p class="subtitle">Coffe and cats</p>
+        <p class="subtitle">Coffee and Cats</p>
         <nav>
             <ul>
-                <h2>Navegación</h2>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
@@ -29,51 +28,52 @@
         <br>
         <!--Bienvenida-->
         <article class="bienvenido" >
-        <h2>
+        
+            <h2>
             ¡Bienvenidos a Neko no Mori!
-        </h2>
-        <img src="recurs/bienvenida.jpg" width="190">
-        <p>
-            Donde el aroma del café se mezcla con ronroneos y suaves patitas.
-            Aquí podrás disfrutar de una bebida calentita, un postre delicioso y, sobre todo, 
-            la mejor compañía: nuestros adorables mininos.
-            Relájate, acaricia, juega y deja que la ternura te atrape… porque en Neko no Mori,
-            cada sorbo viene con amor gatuno.
-        </p>
+           </h2>
+           <img src="recurs/bienvenida.jpg" width="190">
+           <p>
+              Donde el aroma del café se mezcla con ronroneos y suaves patitas.
+              Aquí podrás disfrutar de una bebida calentita, un postre delicioso y, sobre todo, 
+              la mejor compañía: nuestros adorables mininos.
+              Relájate, acaricia, juega y deja que la ternura te atrape… porque en Neko no Mori,
+              cada sorbo viene con amor gatuno.
+           </p>
         </article>
         <hr>
 
         <section class="contenedor">
         <!--Historia de nuestra empresa-->
         <article class="seccion" >
-        <h2>Nuestra historia:</h2> <img src="recurs/history.jpg" width="230" class="img">
-        <p> Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
-           Elegimos este nombre por la calidez de su significado —“Bosque de gatos”—, porque al cruzar
-           nuestras puertas queremos que sientas esa misma sensación: la de adentrarte en un pequeño bosque
-           lleno de ternura, ronroneos y calma.
-           Desde el inicio, nuestra meta fue crear un espacio diferente, acogedor y lleno de cariño, donde las
-           personas pudieran relajarse, disfrutar de una bebida especial y compartir momentos con adorables gatitos
-           rescatados que llenan el ambiente de afecto y tranquilidad.
-           Cada detalle de Neko no Mori fue pensado con dedicación: la decoración cálida, los rincones cómodos, el 
-           aroma del café recién preparado y, por supuesto, la compañía de nuestros pequeños anfitriones felinos, que 
-           hacen de cada visita una experiencia única.
-           Hoy, Neko no Mori representa un sueño hecho realidad: un lugar donde el amor por los animales, la amistad y 
-           la buena energía se encuentran en cada taza. 
-        </p>
+            <h2>Nuestra historia:</h2> <img src="recurs/history.jpg" width="230" class="img">
+            <p > Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
+                Elegimos este nombre por la calidez de su significado —“Bosque de gatos”—, porque al cruzar
+                nuestras puertas queremos que sientas esa misma sensación: la de adentrarte en un pequeño bosque
+                lleno de ternura, ronroneos y calma.
+                Desde el inicio, nuestra meta fue crear un espacio diferente, acogedor y lleno de cariño, donde las
+                personas pudieran relajarse, disfrutar de una bebida especial y compartir momentos con adorables gatitos
+                rescatados que llenan el ambiente de afecto y tranquilidad.
+                Cada detalle de Neko no Mori fue pensado con dedicación: la decoración cálida, los rincones cómodos, el 
+                aroma del café recién preparado y, por supuesto, la compañía de nuestros pequeños anfitriones felinos, que 
+                hacen de cada visita una experiencia única.
+                Hoy, Neko no Mori representa un sueño hecho realidad: un lugar donde el amor por los animales, la amistad y 
+                la buena energía se encuentran en cada taza. 
+            </p>
         </article>
         
         <!--Nuestra Misión-->
         <article class="seccion" >
-        <h2>Misión:</h2><img src="recurs/mision.jpg" width="230" class="img">
-        <p >En Neko no Mori, nuestra misión es ofrecer una experiencia única que combine la excelencia del café artesanal con un ambiente 
-           de serenidad y ternura inspirado en la compañía de gatos rescatados.
-           Nos comprometemos a brindar productos de alta calidad, elaborados con dedicación y respeto por los procesos del café, para que
-           cada taza refleje el cuidado y la pasión que ponemos en nuestro trabajo.
-           Buscamos que nuestros visitantes disfruten no solo de un buen café, sino también de un espacio acogedor donde puedan relajarse, 
-           conectar con la naturaleza y compartir momentos de calma junto a nuestros pequeños anfitriones felinos.
-           En Neko no Mori, cada detalle está pensado para despertar los sentidos, promover el bienestar y celebrar la armonía entre el arte 
-           del café y el amor por los animales.
-        </p>
+            <h2>Misión:</h2><img src="recurs/mision.jpg" width="230" class="img">
+            <p >En Neko no Mori, nuestra misión es ofrecer una experiencia única que combine la excelencia del café artesanal con un ambiente 
+                de serenidad y ternura inspirado en la compañía de gatos rescatados.
+                Nos comprometemos a brindar productos de alta calidad, elaborados con dedicación y respeto por los procesos del café, para que
+                cada taza refleje el cuidado y la pasión que ponemos en nuestro trabajo.
+                Buscamos que nuestros visitantes disfruten no solo de un buen café, sino también de un espacio acogedor donde puedan relajarse, 
+                conectar con la naturaleza y compartir momentos de calma junto a nuestros pequeños anfitriones felinos.
+                En Neko no Mori, cada detalle está pensado para despertar los sentidos, promover el bienestar y celebrar la armonía entre el arte 
+                del café y el amor por los animales.
+            </p>
         </article>
         </section>
     </main>
