--- a/login.html
+++ b/login.html
@@ -15,7 +15,6 @@
         <p class="subtitle">Coffe and cats</p>
       <nav>
         <ul>
-          <h2>Navegación</h2>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Nuestros Productos</a></li>
                 <li><a href="reseñas.html">Reseñas</a></li>
@@ -38,6 +37,7 @@
   <footer>
         <p>&copy;2025 Winx- Neko no Mori</p>
     </footer>
-    
+<script src="login.js"></script>
+
 </body>
 </html>
