--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <button class="promo-btn">Obtener el mío</button>
         </div>
     </div>
-    <script src="scriptIndex.js"></script>
-    
+    <script src="Index.js"></script>
+
     <footer>
         <p>&copy;2025 Winx- Neko no Mori</p>
     </footer>
