--- a/login.html
+++ b/login.html
@@ -23,15 +23,28 @@
         </ul>
       </nav>
   </header>
-  <main class="espacio">
+  <main class="login-centro">
+    <section class="login-card">
     <h2>Iniciar sesión en Neko no Mori</h2>
-    <form>
+    <form id="loginForm" novalidate>
+
+      <div class="form-grupo">
       <label for="user">Usuario:</label>
       <input type="text" id="user" name="user" required /><br>
+      </div>
+
+      <div class="form-grupo">
       <label for="password">Contraseña:</label>
       <input type="password" id="password" name="password" required /><br>
-      <button type="submit">Ingresar</button>
+      </div>
+
+      <div class="form-acciones">
+      <button type="submit" class="btn-sencillo">Ingresar</button>
+      </div>
+
+      <div id="loginMsg" class="msg-sencillo"></div>
     </form>
+    </section>
   </main>
 
   <footer>
