--- a/productos.html
+++ b/productos.html
@@ -72,7 +72,7 @@
                     <p>Precio: S/16</p>
                     <label for="canti1">Cantidad:</label><br>
                     <input type="number" id="canti1" min="1"><br><br>
-                    <button class="carrito"> Agregar al &#x1F6D2 </button>
+                    <button class="carrito"> Agregar </button>
                 </div>
                 <h4>Descripción</h4>
                 <p>Clásico frappuccino de leche batido con mocha blanco y gotas sabor a chocolate, jarabe de azúcar y decorado con crema batida y topping de galletas trozadas.</p>
@@ -81,7 +81,7 @@
             <hr>
 
             <article class="producto">
-                <header><h3>Latte <br>helado</h3></header>
+                <header><h3>Latte helado</h3></header>
                 <figure>
                     <img class="item" src="recurs/latte.png" width="120">
                 </figure>
@@ -89,7 +89,7 @@
                     <p>Precio: S/12</p>
                     <label for="canti1">Cantidad:</label><br>
                     <input type="number" id="canti1" min="1"><br><br>
-                    <button class="carrito">Agregar al &#x1F6D2</button>
+                    <button class="carrito">Agregar</button>
                 </div>
                 <h4>Descripción</h4>
                 <p>Café Espresso de cuerpo completo mezclado con leche fría y cubos de hielo. Sin endulzantes.</p>
@@ -106,7 +106,7 @@
                     <p>Precio: S/13</p>
                     <label for="canti1">Cantidad:</label><br>
                     <input type="number" id="canti1" min="1"><br><br>
-                    <button class="carrito">Agregar al &#x1F6D2</button>
+                    <button class="carrito">Agregar</button>
                 </div>
                 <h4>Descripción</h4>
                 <p>Clásico chocolate caliente con leche vaporizada y salsa de chocolate. Sin endulzantes adicionales.</p>
@@ -123,7 +123,7 @@
                     <p>Precio: S/20</p>
                     <label for="canti1">Cantidad:</label><br>
                     <input type="number" id="canti1" min="1"><br><br>
-                    <button class="carrito">Agregar al &#x1F6D2</button>
+                    <button class="carrito">Agregar</button>
                 </div>
                 <h4>Descripción</h4>
                 <p>Muffin realizado con harina de trigo, aceite vegetal, huevos, jugo de naranja y ralladura de naranja.</p>
