--- a/contactos.html
+++ b/contactos.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <header>
-        <br>
-        <img class="logo" src="recurs/logo.png" width="180">
-        <!--Nombre de nuestra empresa-->
-        <h1 class="title">Neko no Mori</h1>
-        <p class="subtitle">Coffe and cats</p>
+        <div>
+            <div class="textos">
+                <h1 class="title">Neko no Mori</h1>
+                <p class="subtitle">Coffee and Cats</p>
+            </div>
+        </div>
+
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
