--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <header>
-        <br>
-        <img class="logo" src="recurs/logo.png" width="180">
-        <!--Nombre de nuestra empresa-->
-        <h1 class="title">Neko no Mori</h1>
-        <p class="subtitle">Coffee and Cats</p>
+        <div>
+            <div class="textos">
+                <h1 class="title">Neko no Mori</h1>
+                <p class="subtitle">Coffee and Cats</p>
+            </div>
+        </div>
+
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -25,23 +27,19 @@
     </header>
 
     <main class="index">
-        <br>
         <!--Bienvenida-->
         <article class="bienvenido" >
-        
-            <h2>
-            ¡Bienvenidos a Neko no Mori!
-           </h2>
-           <img src="recurs/bienvenida.jpg" width="190">
            <p>
+            <br>
+             <strong>¡Bienvenidos a Neko no Mori!</strong><br>
               Donde el aroma del café se mezcla con ronroneos y suaves patitas.
               Aquí podrás disfrutar de una bebida calentita, un postre delicioso y, sobre todo, 
               la mejor compañía: nuestros adorables mininos.
               Relájate, acaricia, juega y deja que la ternura te atrape… porque en Neko no Mori,
               cada sorbo viene con amor gatuno.
            </p>
+           <img class="gatito" src="recurs/logo1.jpg" width="230">
         </article>
-        <hr>
 
         <section class="contenedor">
         <!--Historia de nuestra empresa-->
