--- a/index.html
+++ b/index.html
@@ -26,89 +26,73 @@
         </nav>
     </header>
 
-    <main class="index">
-        <!--Bienvenida-->
-        <article class="bienvenido" >
-           <p>
-            <br>
-             <strong>¡Bienvenidos a Neko no Mori!</strong><br>
-              Donde el aroma del café se mezcla con ronroneos y suaves patitas.
-              Aquí podrás disfrutar de una bebida calentita, un postre delicioso y, sobre todo, 
-              la mejor compañía: nuestros adorables mininos.
-              Relájate, acaricia, juega y deja que la ternura te atrape… porque en Neko no Mori,
-              cada sorbo viene con amor gatuno.
-           </p>
+    <main >
+        <section class="index">
+            <article class="bienvenido" >
+            <div class="texto-bienvenida">
+                <h2>¡Bienvenidos a Neko no Mori!</h2>
+                <p>
+                    Donde el aroma del café se mezcla con ronroneos y suaves patitas.
+                    Aquí podrás disfrutar de una bebida calentita, un postre delicioso y, sobre todo, 
+                    la mejor compañía: nuestros adorables mininos.
+                    Relájate, acaricia, juega y deja que la ternura te atrape… porque en Neko no Mori,
+                    cada sorbo viene con amor gatuno.
+                </p>
+            </div>
            <img class="gatito" src="recurs/logo1.jpg" width="230">
         </article>
-
-        <section class="contenedor">
-        <!--Historia de nuestra empresa-->
-        <article class="seccion" >
-            <h2>Nuestra historia:</h2> <img src="recurs/history.jpg" width="230" class="img">
-            <p > Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
-                Elegimos este nombre por la calidez de su significado —“Bosque de gatos”—, porque al cruzar
-                nuestras puertas queremos que sientas esa misma sensación: la de adentrarte en un pequeño bosque
-                lleno de ternura, ronroneos y calma.
-                Desde el inicio, nuestra meta fue crear un espacio diferente, acogedor y lleno de cariño, donde las
-                personas pudieran relajarse, disfrutar de una bebida especial y compartir momentos con adorables gatitos
-                rescatados que llenan el ambiente de afecto y tranquilidad.
-                Cada detalle de Neko no Mori fue pensado con dedicación: la decoración cálida, los rincones cómodos, el 
-                aroma del café recién preparado y, por supuesto, la compañía de nuestros pequeños anfitriones felinos, que 
-                hacen de cada visita una experiencia única.
-                Hoy, Neko no Mori representa un sueño hecho realidad: un lugar donde el amor por los animales, la amistad y 
-                la buena energía se encuentran en cada taza. 
-            </p>
-        </article>
-
-        <article class="adopcion">
-            <h3><strong>Gatitos en adopción:</strong></h3>
-            <p>Adopta un gatito y descubre cómo un pequeño ronroneo puede llenar tu vida de amor</p>
-        </article>
+        </section>
+        <section class="adopcion">
+            <article>
+                <h3><strong>Gatitos en adopción:</strong></h3>
+                <p>Adopta un gatito y descubre cómo un pequeño ronroneo puede llenar tu vida de amor</p>
+            </article>
+        </section>
 
         <section class="contenedorInt">
             <article class="seccion2">
-                <h3>Moka</h3>
                 <img src="recurs/moka.png" width=300>
+                <h3>Moka</h3>
                 <p><strong>Edad:</strong> 3 meses</p>
                 <p><strong>Características:</strong> amorosa, tranquila y tierna</p>
                 <button id="boton">Adoptar</button> 
             </article>
             
             <article class="seccion2">
-                <h3>Haru</h3>
                 <img src="recurs/haru.png" width=300>
+                <h3>Haru</h3>
                 <p><strong>Edad:</strong> 3 meses</p>
                 <p><strong>Características:</strong> amorosa, juguetona y dormilona</p>
                 <button id="boton">Adoptar</button>                
             </article>
 
             <article class="seccion2">
-                <h3>Mochi</h3>
                 <img src="recurs/mochi.png" width=300>
+                <h3>Mochi</h3>
                 <p><strong>Edad:</strong> 3 meses</p>
                 <p><strong>Características:</strong> curioso, tranquilo y muy cariñoso.</p>
                 <button id="boton">Adoptar</button>               
             </article>
 
             <article class="seccion2">
-                <h3>Yuki</h3>
                 <img src="recurs/yuki.png" width=300>
+                <h3>Yuki</h3>
                 <p><strong>Edad:</strong> 2 meses</p>
                 <p><strong>Características:</strong> dulce, ronronea sin parar y adora los mimos.</p>
                 <button id="boton">Adoptar</button>                
 
             </article>
             <article class="seccion2">
-                <h3>Tofu</h3>
                 <img src="recurs/tofu.png" width=300>
+                <h3>Tofu</h3>
                 <p><strong>Edad:</strong> 2 meses</p>
                 <p><strong>Características:</strong> divertido, sociable y aventurero</p>
                 <button id="boton">Adoptar</button> 
             </article>
 
             <article class="seccion2">
-                <h3>Sora</h3> 
                 <img src="recurs/sora.png" width=300>
+                 <h3>Sora</h3> 
                 <p><strong>Edad:</strong> 3 meses</p>
                 <p><strong>Características:</strong> elegante, observadora y tierna.</p>
                 <button id="boton">Adoptar</button> 
@@ -130,6 +114,23 @@
             </p>
         </article>
         </section>
+         <!--Historia de nuestra empresa-->
+        <article class="seccion" >
+            <h2>Nuestra historia:</h2> <img src="recurs/history.jpg" width="230" class="img">
+            <p > Neko no Mori nació de dos grandes pasiones: los gatos y el buen café.
+                Elegimos este nombre por la calidez de su significado —“Bosque de gatos”—, porque al cruzar
+                nuestras puertas queremos que sientas esa misma sensación: la de adentrarte en un pequeño bosque
+                lleno de ternura, ronroneos y calma.
+                Desde el inicio, nuestra meta fue crear un espacio diferente, acogedor y lleno de cariño, donde las
+                personas pudieran relajarse, disfrutar de una bebida especial y compartir momentos con adorables gatitos
+                rescatados que llenan el ambiente de afecto y tranquilidad.
+                Cada detalle de Neko no Mori fue pensado con dedicación: la decoración cálida, los rincones cómodos, el 
+                aroma del café recién preparado y, por supuesto, la compañía de nuestros pequeños anfitriones felinos, que 
+                hacen de cada visita una experiencia única.
+                Hoy, Neko no Mori representa un sueño hecho realidad: un lugar donde el amor por los animales, la amistad y 
+                la buena energía se encuentran en cada taza. 
+            </p>
+        </article>
     </main>
 
     <div id="promoModal" class="modal">
