--- a/login.html
+++ b/login.html
@@ -23,30 +23,49 @@
         </ul>
       </nav>
   </header>
-  <main class="login-centro">
-    <br><br>
-    <section class="login-card">
-    <h2>Iniciar sesión en Neko no Mori</h2>
-    <form id="loginForm" novalidate>
 
-      <div class="form-grupo">
-      <label for="user">Usuario:</label>
-      <input type="text" id="user" name="user" required /><br>
+  <main><section class="login-centro">
+      <div class="login-card">
+        <h2>Inicia sesión</h2>
+        
+        <p class="login-intro">
+          Si ya tienes cuenta en Neko no Mori, ingresa aquí.
+        </p>
+
+        <form id="loginForm">
+          <div class="form-grupo">
+            <label for="email">Correo electrónico</label>
+            <input type="email" id="email" placeholder="tu@email.com" required>
+          </div>
+
+          <div class="form-grupo">
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" placeholder="Contraseña" required>
+          </div>
+
+          <div class="form-acciones">
+            <button type="submit" class="btn-sencillo">Ingresar</button>
+            <p id="loginMsg" class="msg-sencillo"></p>
+          </div>
+        </form>
+
+        <div class="login-opciones">
+          <p class="login-pregunta">¿No tienes cuenta?</p>
+          <button type="button" class="btn-sencillo" id="btnRegistro">
+            Crear cuenta
+          </button>
+
+          <p class="login-visitante">O continúa sin iniciar sesión</p>
+          <a href="productos.html" class="login-link">Ver productos</a>
+        </div>
       </div>
-
-      <div class="form-grupo">
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" required /><br>
-      </div>
-
-      <div class="form-acciones">
-      <button type="submit" class="btn-sencillo">Ingresar</button>
-      </div>
-
-      <div id="loginMsg" class="msg-sencillo"></div>
-    </form>
     </section>
   </main>
+
+  <script src="login.js"></script>
+</body>
+</html>
+
 
   <footer>
         <p>&copy;2025 Winx- Neko no Mori</p>
