--- a/index.html
+++ b/index.html
@@ -42,11 +42,22 @@
            <img class="gatito" src="recurs/logo1.jpg" width="230">
         </article>
         </section>
+        <section class="empleados">
+            <article>
+                
+            </article>
+
+        </section>
         <section class="adopcion">
             <article>
+                <br><br>
+                <img class="adop" src="recurs/adop.png" width="220">
+                <br>
                 <h3><strong>Gatitos en adopción:</strong></h3>
-                <p>Adopta un gatito y descubre cómo un pequeño ronroneo puede llenar tu vida de amor</p>
+                <p>Adopta un gatito y descubre cómo un pequeño ronroneo puede llenar tu vida de amor.</p>
+                <br><br>
             </article>
+            
         </section>
 
         <section class="contenedorInt">
